try setting position: sticky to fix popup jumping on mobile

--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,7 +1,7 @@
 .popup {
   display: flex;
 
-  position: fixed;
+  position: sticky;
   top: 0;
   right: 0;
   bottom: 0;
@@ -24,7 +24,7 @@
 .popup::before {
   content: '';
   
-  position: fixed;
+  position: sticky;
   top: 0;
   right: 0;
   bottom: 0;
